--- a/Views/Event/AddEvent.cshtml
+++ b/Views/Event/AddEvent.cshtml
@@ -44,6 +44,12 @@
                 <span asp-validation-summary="DateEnd" class="text-danger"></span>
             </div>
         </div>
+        <div class="form-group d-none">
+            <div class="col-sm-10">
+                <input asp-for="UserName" class="form-control" />
+                <span asp-validation-summary="UserName" class="text-danger"></span>
+            </div>
+        </div>
         <div class="col-md-5">
             <input type="submit" class="btn btn-primary" />
 
