--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,8 @@
                             <li class="nav-item active">
                                 <a id="nav-link text-dark" asp-action="LogOut" asp-controller="Account" class="nav-link">Wyloguj <span class="sr-only"></span></a>
                             </li>
-
+                            <li><a id="nav-link text-dark" class="nav-link" href="@Url.Action("AddEvent","Event")">dodaj event</a></li>
+                            <li><a id="nav-link text-dark" class="nav-link" href="@Url.Action("ShowEvents","Event")">Pokaż eventy</a></li>
                         }
                         else
                         {
@@ -42,7 +43,7 @@
 
                             <li><a id="nav-link text-dark" class="nav-link" href="@Url.Action("AddEvent","Event")">dodaj event</a></li>
                             <li><a id="nav-link text-dark" class="nav-link" href="@Url.Action("ShowEvents","Event")">Pokaż eventy</a></li>
-
+                            <li><a id="nav-link text-dark" class="nav-link" href="@Url.Action("PublicToFacebook","Publication")">Test Publikacji</a></li>
 
                         }
                     </ul>
